Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ The following device information is available:</p>
 <a href="https://github.com/openresty/lua-nginx-module#installation">NGINX compiled with Lua module</a>
 
 <ul>
-<li>(<a href="http://openresty.org/">OpenResty</a> bundle is recommended)</li>
+<li>
+<a href="http://openresty.org/">OpenResty</a> bundle is recommended</li>
 </ul>
 </li>
 <li>
